--- a/client/src/pages/AdminPanelPage/AdminPanel.module.sass
+++ b/client/src/pages/AdminPanelPage/AdminPanel.module.sass
@@ -10,3 +10,15 @@
   justify-content: center
   align-items: center
   margin: 10px 15px
+.header
+  display: block
+  position: fixed
+  z-index: 1
+  left: 0
+  top: 0
+  height: 80px
+  width: 100%
+  box-shadow: 0 3px 14px rgba(84,89,101,.13)
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 60%, rgba(237,237,237,1) 100%)
+  margin-bottom: 30px
+
