--- a/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
+++ b/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
@@ -1,5 +1,5 @@
 .sidebar
-  margin: 0
+  margin-top: -80px
   padding: 0
   font-size: 24px
   position: fixed
@@ -8,6 +8,8 @@
   background-color: #151719
   z-index: 100
   transition: 500ms liner
+  left: 0
+  right: 0
   .toggleBtn
     position: absolute
     left: 230px
