--- a/client/src/pages/AdminPanelPage/AdminPanel.module.sass
+++ b/client/src/pages/AdminPanelPage/AdminPanel.module.sass
@@ -4,6 +4,7 @@
   justify-content: center
   max-width: 1200px
   width: 100%
+  margin-top: 80px
 .form-container
   display: flex
   flex-direction: column
