Added data list in admin-panel

--- a/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
+++ b/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
@@ -25,6 +25,8 @@
       color: #cacaca
       padding: 15px 10px
       border-bottom: 1px solid rgba(100, 100, 100, 0.3)
+      a
+        color: #cacaca
 
 .sidebarHidden
   left: -200px
