--- a/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
+++ b/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
@@ -5,7 +5,7 @@
   position: fixed
   width: 200px
   height: 100%
-  background-color: #151719
+  background-color: #7376df
   z-index: 100
   transition: 500ms liner
   left: 0
@@ -18,7 +18,7 @@
       display: block
       width: 30px
       height: 4px
-      background-color: #151719
+      background-color: #6365d2
       margin: 5px 0
   ul
     li
@@ -26,9 +26,12 @@
       padding: 15px 10px
       border-bottom: 1px solid rgba(100, 100, 100, 0.3)
       a
-        color: #cacaca
+        color: white
 
 .sidebarHidden
   left: -200px
 
-
+.logo
+  margin: 20px 0
+  display: flex
+  justify-content: center
