--- a/client/src/pages/AdminPanelPage/AdminPanel.module.sass
+++ b/client/src/pages/AdminPanelPage/AdminPanel.module.sass
@@ -5,6 +5,8 @@
   max-width: 1200px
   width: 100%
   margin-top: 80px
+  margin-left: auto
+  margin-right: auto
 .form-container
   display: flex
   flex-direction: column
@@ -12,7 +14,7 @@
   align-items: center
   margin: 10px 15px
 .header
-  display: block
+  display: flex
   position: fixed
   z-index: 1
   left: 0
@@ -22,4 +24,23 @@
   box-shadow: 0 3px 14px rgba(84,89,101,.13)
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 60%, rgba(237,237,237,1) 100%)
   margin-bottom: 30px
-
+  justify-content: center
+.headerTitle
+  color: #434546
+  font-size: 22px
+.headerBox
+  width: 1000px
+  height: 100%
+  display: flex
+  align-items: center
+  flex-direction: row
+  justify-content: space-between
+.userBox
+  display: flex
+  justify-content: center
+  flex-direction: column
+  align-items: center
+  width: 200px
+  height: 40px
+  background-color: #282c34
+  color: #cacaca
