--- a/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
+++ b/client/src/components/AdminPanelComponents/SideBar/LeftSideBar/LeftSideBar.module.sass
@@ -3,22 +3,22 @@
   padding: 0
   font-size: 24px
   position: fixed
-  width: 200px
+  width: 250px
   height: 100%
-  background-color: #7376df
+  background-color: #333333
   z-index: 100
   transition: 500ms liner
   left: 0
   right: 0
   .toggleBtn
     position: absolute
-    left: 230px
+    left: 280px
     top: 20px
     span
       display: block
       width: 30px
       height: 4px
-      background-color: #6365d2
+      background-color: #333333
       margin: 5px 0
   ul
     li
@@ -29,7 +29,7 @@
         color: white
 
 .sidebarHidden
-  left: -200px
+  left: -250px
 
 .logo
   margin: 20px 0
