Added Good design

--- a/client/src/components/AdminPanelComponents/DataTables/NewsTable/NewsTable.module.sass
+++ b/client/src/components/AdminPanelComponents/DataTables/NewsTable/NewsTable.module.sass
@@ -6,3 +6,20 @@
   padding: 7px 3px
 .icon
   cursor: pointer
+.addButton
+  width: 80px
+  height: 34px
+  color: white
+  display: flex
+  justify-content: center
+  align-items: center
+  background-color: #3ea9f5
+  font-size: 18px
+  border-radius: 10px
+  font-weight: 500
+  cursor: pointer
+  span
+    margin-left: 5px
+  &:hover
+    box-shadow: 0 0 13px 3px rgba(0,0,0,0.75)
+    background-color: #3f99e6
