--- a/client/src/components/Forms/LoginForm/LoginForm.module.sass
+++ b/client/src/components/Forms/LoginForm/LoginForm.module.sass
@@ -2,3 +2,12 @@
   display: flex
   flex-direction: column
   justify-content: center
+  align-items: center
+  width: 100%
+.formContainer
+  width: 800px
+.title
+  font-family: 'izhitsacyrillic','Ruslan Display', cursive
+  font-size: 32px
+  margin: 20px 0 10px 0
+  color: #f5cd6f
