--- a/client/src/pages/MainPage/MainPage.module.sass
+++ b/client/src/pages/MainPage/MainPage.module.sass
@@ -2,3 +2,17 @@
 .container
   @include flex-container(column)
   @include page-container
+.newsList
+  margin-top: 23px
+  width: 1200px
+  background: rgba(255,255,255,0.55)
+  padding: 20px 25px
+  border: 1px solid rgba(0,0,0,0.2)
+  box-shadow: 0 0 10px rgba(0,0,0,0.3)
+  border-radius: 10px
+.newsTitle
+  font-family: 'izhitsacyrillic','Ruslan Display', cursive
+  font-size: 48px
+  color: #f5cd6f
+  margin-top: 30px
+
