--- a/client/src/components/AdminPanelComponents/Home/Home.module.sass
+++ b/client/src/components/AdminPanelComponents/Home/Home.module.sass
@@ -1,4 +1,13 @@
 .container
   display: flex
+  flex-direction: column
+  align-items: center
   width: 100%
-  justify-content: center
+  justify-content: flex-start
+  margin-top: 20px
+.welcome
+  margin-top: 25px
+  font-size: 65px
+  font-family: 'Hind', sans-serif
+  font-weight: 800
+  color: #343434
