--- a/client/src/components/AdminPanelComponents/ModalWindow/ModalWindow.module.sass
+++ b/client/src/components/AdminPanelComponents/ModalWindow/ModalWindow.module.sass
@@ -17,6 +17,8 @@
   display: flex
   flex-direction: column
   border-radius: 15px
+  max-height: calc(100vh - 160px)
+  overflow-y: auto
 .header
   display: flex
   justify-content: space-between
