--- a/client/src/components/News/NewsRow/NewsRow.module.sass
+++ b/client/src/components/News/NewsRow/NewsRow.module.sass
@@ -1,25 +1,40 @@
 .rowContainer
   display: flex
-  align-items: center
-  width: 80%
+  width: 100%
   margin: 20px auto 0 auto
   padding: 10px
-  border: 1px solid black
   img
-    width: 200px
-    height: 120px
+    width: 290px
+    height: 180px
     margin-right: 15px
   .newsContent
     display: flex
     flex-direction: column
-    align-items: center
+    width: 100%
+    min-height: 70px
     .title
-      font-size: 22px
-      color: #363636
+      justify-content: center
+      font-size: 30px
+      margin-bottom: 15px
+      font-family: 'izhitsacyrillic','Ruslan Display', cursive
+      color: #f5cd6f
     .description
-      font-size: 16px
+      font-size: 20px
+      line-height: 1.7em
       color: #363636
 .date
-  align-self: flex-end
   color: #858585
-  font-size: 12px
+  font-size: 14px
+.boxTitle
+  display: flex
+  flex-direction: row
+  justify-content: space-between
+  width: 100%
+.more
+  color: #f5cd6f
+  font-size: 20px
+  img
+    width: 30px
+    height: 30px
+    vertical-align: middle
+
