--- a/client/src/pages/AdminPanelPage/AdminPanel.module.sass
+++ b/client/src/pages/AdminPanelPage/AdminPanel.module.sass
@@ -29,18 +29,42 @@
   color: #434546
   font-size: 22px
 .headerBox
-  width: 1000px
+  width: 100%
   height: 100%
   display: flex
   align-items: center
   flex-direction: row
   justify-content: space-between
+  margin-left: 330px
+  margin-right: 100px
 .userBox
   display: flex
-  justify-content: center
-  flex-direction: column
+  justify-content: space-between
+  flex-direction: row
   align-items: center
-  width: 200px
+  width: 300px
   height: 40px
-  background-color: #282c34
   color: #cacaca
+.userInfoContainer
+  display: flex
+  flex-direction: column
+  justify-content: flex-start
+  color: #333333
+.logout
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 105px
+  height: 40px
+  background-color: #333333
+  cursor: pointer
+  font-size: 16px
+  color: white
+  border-radius: 10px
+  &:hover
+    background-color: #3ea9f5
+@media (max-width: 1024px)
+  .headerBox
+    margin-right: 30px
+    margin-left: 100px
+
