Added Good design

--- a/client/src/components/Priests/Priests.module.sass
+++ b/client/src/components/Priests/Priests.module.sass
@@ -1,6 +1,4 @@
-.galleryList
-  display: flex
-  flex-direction: column
+.newsList
   margin-top: 23px
   width: 1200px
   background: rgba(255,255,255,0.55)
@@ -8,8 +6,7 @@
   border: 1px solid rgba(0,0,0,0.2)
   box-shadow: 0 0 10px rgba(0,0,0,0.3)
   border-radius: 10px
-
-.galleryTitle
+.newsTitle
   font-family: 'izhitsacyrillic','Ruslan Display', cursive
   font-size: 48px
   color: #f5cd6f
@@ -19,13 +16,8 @@
   display: flex
   flex-direction: column
   align-items: center
-
 .separatorBox
   display: flex
   flex-direction: column
 .separatorImg
   margin: 0 auto
-.rowContainer
-  display: flex
-  justify-content: space-around
-
