--- a/client/src/components/AdminPanelComponents/Buttons/SubmitFormButton/SubmitFormButton.module.sass
+++ b/client/src/components/AdminPanelComponents/Buttons/SubmitFormButton/SubmitFormButton.module.sass
@@ -4,6 +4,7 @@
   align-items: center
   width: 200px
   height: 50px
+  padding: 10px
   background-color: #3ea9f5
   border-radius: 10px
   margin-top: 20px
