--- a/client/src/components/Gallery/GalleryRow/GalleryRow.module.sass
+++ b/client/src/components/Gallery/GalleryRow/GalleryRow.module.sass
@@ -1,8 +1,22 @@
 .rowContainer
   display: flex
-  width: 100%
+  width: 450px
+  height: 320px
   margin: 20px auto 0 auto
   padding: 10px
+  background-color: white
+  box-shadow: 0 0 15px #353535
+  &:hover
+    box-shadow: 0 0 20px #000000
+.imageWrapper
+  width: 100%
+  height: 100%
+  background-color: #3ea9f5
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
+
+
   img
     width: 290px
     height: 180px
