--- a/client/src/components/News/PriestRow/PriestRow.module.sass
+++ b/client/src/components/News/PriestRow/PriestRow.module.sass
@@ -5,13 +5,14 @@
   padding: 10px
   img
     width: 290px
-    height: 180px
-    margin-right: 15px
+    max-height: 350px
+    margin-right: 25px
   .newsContent
     display: flex
     flex-direction: column
-    width: 100%
+    width: 860px
     min-height: 70px
+    margin-left: auto
     .title
       justify-content: center
       font-size: 30px
