--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -37,3 +37,20 @@
     li
       float: left
 
+.rightLink
+  margin-left: 25px
+  height: 140px
+  width: 100px
+  display: flex
+  align-items: center
+  justify-content: center
+  border: 1px solid rgba(0, 0, 0, 0.2)
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3)
+  border-radius: 10px
+  &:hover
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3)
+  img
+    height: 130px
+    width: 90px
+
+
